--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,9 @@ sup {
   position: relative;
   vertical-align: baseline
 }
+b {
+  font-weight: 700
+}
 sub {
   bottom: -.25em
 }
@@ -4391,6 +4394,7 @@ html :where(.is-position-sticky) {
   max-width: 100%
 }
 .button {
+  box-sizing: border-box;
   height: 36px;
   border: 1px solid #e56f49;
   background: #e56f49;
@@ -4404,7 +4408,8 @@ html :where(.is-position-sticky) {
   text-transform: uppercase;
   color: #fff;
   cursor: pointer;
-  transition: .2s ease-in-out
+  transition: .2s ease-in-out;
+  text-decoration: none
 }
 @media(max-width:47.99875em) {
   .button {
@@ -4438,6 +4443,23 @@ html :where(.is-position-sticky) {
     background-color: #e56f49
   }
 }
+.button--light {
+  background-color: #fff;
+  border-color: #fff;
+  color: #e56f49
+}
+.button--light::before {
+  background-color: #e56f49
+}
+@media(any-hover:hover) {
+  .button--light:hover {
+    background-color: #e56f49;
+    color: #fff
+  }
+  .button--light:hover::before {
+    background-color: #fff
+  }
+}
 @-webkit-keyframes rotate-animation {
   0% {
     -webkit-transform: rotate(0);
@@ -4464,6 +4486,28 @@ html :where(.is-position-sticky) {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg)
+  }
+}
+.title {
+  text-transform: uppercase;
+  font-size: 48px;
+  color: #4a4b4f;
+  font-weight: 900
+}
+@media(max-width:74.99875em) {
+  .title {
+    font-size: 42px;
+    margin-bottom: 2em
+  }
+}
+@media(max-width:63.99875em) {
+  .title {
+    font-size: 34px
+  }
+}
+@media(max-width:47.99875em) {
+  .title {
+    font-size: 28px
   }
 }
 .hero {
@@ -4706,16 +4750,24 @@ html :where(.is-position-sticky) {
     font-size: 14px
   }
 }
-.hero-personal {
+.hero__personal {
   left: 15%;
   bottom: 0;
-  background-color: #fff;
   position: absolute;
+  z-index: 5
+}
+@media(max-width:74.99875em) {
+  .hero__personal {
+    left: 5%
+  }
+}
+.hero-personal {
+  background-color: #fff;
   padding: 34px;
-  z-index: 5;
   display: flex;
   align-items: center;
-  gap: 21px
+  gap: 21px;
+  justify-content: center
 }
 @media(max-width:109.375em) {
   .hero-personal {
@@ -4726,11 +4778,6 @@ html :where(.is-position-sticky) {
   .hero-personal {
     padding: 16px;
     gap: 16px
-  }
-}
-@media(max-width:74.99875em) {
-  .hero-personal {
-    left: 5%
   }
 }
 @media(max-width:47.99875em) {
@@ -4779,6 +4826,9 @@ html :where(.is-position-sticky) {
   line-height: 130%;
   color: #515357
 }
+.hero-personal__text p {
+  margin: 0
+}
 @media(max-width:87.5em) {
   .hero-personal__text {
     font-size: 18px
@@ -4791,6 +4841,14 @@ html :where(.is-position-sticky) {
 }
 .hero-personal__text b {
   font-weight: 700
+}
+.hero-personal--round {
+  border-radius: 60px;
+  background-color: #e9e9e9;
+  padding: 10px
+}
+.hero-personal--round .hero-personal__text {
+  max-width: 186px
 }
 .hero-block {
   position: absolute;
@@ -4936,5 +4994,676 @@ html :where(.is-position-sticky) {
   .hero-block__circle-sm {
     width: 45px;
     bottom: 5px
+  }
+}
+.clients__container {
+  padding: 0
+}
+.clients__inner {
+  display: grid;
+  grid-template-columns: 47.59% 1fr
+}
+@media(max-width:63.99875em) {
+  .clients__inner {
+    grid-template-columns: auto
+  }
+}
+.clients__img {
+  width: 100%;
+  height: 100%
+}
+@media(max-width:63.99875em) {
+  .clients__img {
+    aspect-ratio: 4/3;
+    height: auto
+  }
+}
+.clients__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover
+}
+.clients__content {
+  padding: 0 15px;
+  max-width: 840px;
+  margin: 56px auto
+}
+@media(max-width:63.99875em) {
+  .clients__content {
+    order: -1
+  }
+}
+@media(max-width:47.99875em) {
+  .clients__content {
+    margin: 32px 0
+  }
+}
+.clients__title {
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 130%;
+  text-transform: uppercase;
+  color: #4a4b4f;
+  margin-bottom: 45px;
+  padding-left: 60px;
+  max-width: 641px;
+  margin-top: 0
+}
+@media(max-width:87.49875em) {
+  .clients__title {
+    padding-left: 3rem;
+    font-size: 28px;
+    margin-bottom: 1.2em
+  }
+}
+@media(max-width:47.99875em) {
+  .clients__title {
+    padding-left: 0;
+    font-size: 24px
+  }
+}
+.clients__list {
+  list-style: none;
+  padding-left: 0;
+  margin-bottom: 15px;
+  margin-top: 0
+}
+.clients__text {
+  font-weight: 300;
+  line-height: 130%;
+  color: #4a4b4f;
+  margin-bottom: 1.5em
+}
+@media(min-width:87.5em) {
+  .clients__text {
+    font-size: 23px;
+    margin-bottom: 80px
+  }
+}
+@media(min-width:48em) {
+  .clients__text {
+    font-size: 21px;
+    margin-bottom: 2.5em
+  }
+}
+.client-item {
+  padding: 25px 43px 25px 68px;
+  display: flex;
+  align-items: center;
+  gap: 64px;
+  font-weight: 300;
+  font-size: 23px;
+  line-height: 130%;
+  color: #4a4b4f
+}
+@media(max-width:87.49875em) {
+  .client-item {
+    font-size: 21px;
+    gap: 56px;
+    padding: 20px 38px 20px 58px
+  }
+}
+@media(max-width:63.99875em) {
+  .client-item {
+    padding: 20px 30px;
+    gap: 32px
+  }
+}
+@media(max-width:47.99875em) {
+  .client-item {
+    padding: 16px;
+    gap: 16px;
+    font-size: 16px
+  }
+}
+.client-item p {
+  margin: 0
+}
+.client-item:not(:last-child) {
+  border-bottom: 1px solid #d5d6df
+}
+.client-item__icon {
+  aspect-ratio: 1;
+  flex: 0 0 auto;
+  width: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+@media(max-width:47.99875em) {
+  .client-item__icon {
+    width: 40px
+  }
+}
+.packaging {
+  margin: 155px 0
+}
+@media(max-width:63.99875em) {
+  .packaging {
+    margin: 120px 0
+  }
+}
+@media(max-width:47.99875em) {
+  .packaging {
+    margin: 60px 0
+  }
+}
+.packaging__head {
+  max-width: 754px;
+  margin: 0 auto 3.0208333333em;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 48px;
+  color: #4a4b4f
+}
+@media(max-width:74.99875em) {
+  .packaging__head {
+    font-size: 42px;
+    margin-bottom: 2em
+  }
+}
+@media(max-width:63.99875em) {
+  .packaging__head {
+    font-size: 34px
+  }
+}
+@media(max-width:47.99875em) {
+  .packaging__head {
+    font-size: 28px
+  }
+}
+.packaging__title {
+  font-weight: 900;
+  margin: 0;
+  font-size: inherit;
+  line-height: 130%
+}
+.packaging__body {
+  max-width: 1344px;
+  margin: 0 auto
+}
+.packaging__list {
+  width: 100%;
+  list-style-type: none;
+  counter-reset: counter;
+  padding-left: 0
+}
+.packaging__bottom {
+  padding-left: 250px
+}
+@media(max-width:74.93625em) {
+  .packaging__bottom {
+    padding-left: 180px
+  }
+}
+@media(max-width:47.99875em) {
+  .packaging__bottom {
+    padding-left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: -moz-fit-content;
+    max-width: -webkit-fit-content;
+    max-width: fit-content;
+    margin: 0 auto
+  }
+}
+.packaging-item {
+  font-size: 23px;
+  line-height: 130%;
+  color: #4a4b4f;
+  padding: 87px 250px;
+  counter-increment: counter;
+  position: relative
+}
+@media(max-width:74.99875em) {
+  .packaging-item {
+    font-size: 18px;
+    padding: 60px 180px
+  }
+}
+@media(max-width:47.99875em) {
+  .packaging-item {
+    font-size: 16px
+  }
+}
+.packaging-item__decor-line {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  translate: -50% 0;
+  width: calc(100% - 228px);
+  pointer-events: none;
+  border-bottom: 1px dashed rgba(213,214,223,.5);
+  border-width: 1px;
+  border-style: dashed;
+  border-color: rgba(213,214,223,.5);
+  -o-border-image: repeating-linear-gradient(90deg,rgba(213,214,223,.5) 0,rgba(213,214,223,.5) 21px,transparent 21px,transparent 42px) 1;
+  border-image: repeating-linear-gradient(90deg,rgba(213,214,223,.5) 0,rgba(213,214,223,.5) 21px,transparent 21px,transparent 42px) 1
+}
+@media(max-width:74.99875em) {
+  .packaging-item__decor-line {
+    width: calc(100% - 180px)
+  }
+}
+@media(max-width:47.99875em) {
+  .packaging-item__decor-line {
+    display: none
+  }
+}
+.packaging-item__decor-line::after,
+.packaging-item__decor-line::before {
+  position: absolute;
+  border: 1px dashed rgba(213,214,223,.5);
+  content: "";
+  overflow: hidden;
+  border-width: 1px;
+  border-color: rgba(213,214,223,.5);
+  border-style: dashed;
+  -o-border-image: repeating-linear-gradient(0deg,rgba(213,214,223,.5) 0,rgba(213,214,223,.5) 21px,transparent 21px,transparent 42px) 1;
+  border-image: repeating-linear-gradient(0deg,rgba(213,214,223,.5) 0,rgba(213,214,223,.5) 21px,transparent 21px,transparent 42px) 1
+}
+.packaging-item::before {
+  content: counter(counter) ".";
+  font-weight: 900;
+  font-size: 108px;
+  line-height: 130%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #4a4b4f;
+  position: absolute;
+  width: 216px;
+  top: 87px;
+  aspect-ratio: 216/287;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat
+}
+@media(max-width:74.99875em) {
+  .packaging-item::before {
+    width: 150px;
+    font-size: 70px
+  }
+}
+@media(max-width:47.99875em) {
+  .packaging-item::before {
+    width: 75px;
+    font-size: 20px;
+    top: 20px
+  }
+}
+.packaging-item * {
+  margin: 0
+}
+.packaging-item__title {
+  font-weight: 900;
+  font-size: 30px;
+  text-transform: uppercase;
+  margin: 0 0 .7em
+}
+@media(max-width:74.99875em) {
+  .packaging-item__title {
+    font-size: 24px
+  }
+}
+@media(max-width:47.99875em) {
+  .packaging-item__title {
+    font-size: 20px
+  }
+}
+.packaging-item__text {
+  font-weight: 300;
+  margin-bottom: 1.3043478261em
+}
+.packaging-item__result {
+  padding-left: 62px;
+  position: relative
+}
+@media(max-width:47.99875em) {
+  .packaging-item__result {
+    padding-left: 20px
+  }
+}
+.packaging-item__result::before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 7px;
+  height: 100%;
+  border-radius: 7px;
+  background-color: #e56f49;
+  content: ""
+}
+@media(max-width:47.99875em) {
+  .packaging-item__result::before {
+    width: 3px
+  }
+}
+.packaging-item:nth-child(odd)::before {
+  left: 0
+}
+.packaging-item:nth-child(odd) .packaging-item__decor-line::before {
+  left: 0;
+  height: 98px;
+  bottom: 0
+}
+.packaging-item:nth-child(odd) .packaging-item__decor-line::after {
+  right: 0;
+  height: 108px;
+  top: 0
+}
+@media(max-width:47.99875em) {
+  .packaging-item:nth-child(odd) {
+    padding: 20px 0 20px 80px
+  }
+}
+.packaging-item:nth-child(even)::before {
+  right: 0
+}
+.packaging-item:nth-child(even)::after {
+  position: absolute;
+  width: 100vw;
+  top: 0;
+  height: 100%;
+  left: 50%;
+  translate: -50% 0;
+  content: "";
+  background-color: #e9e9e9;
+  z-index: -1
+}
+.packaging-item:nth-child(even) .packaging-item__decor-line::before {
+  left: 0;
+  height: 71px;
+  top: 0
+}
+.packaging-item:nth-child(even) .packaging-item__decor-line::after {
+  right: 0;
+  height: 137px;
+  bottom: 0
+}
+@media(max-width:47.99875em) {
+  .packaging-item:nth-child(even) {
+    padding: 20px 80px 20px 0
+  }
+}
+.packaging-item:nth-child(3n+1)::before {
+  background-image: url(../img/cup-1.webp)
+}
+.packaging-item:nth-child(3n+2)::before {
+  background-image: url(../img/cup-2.webp)
+}
+.packaging-item:nth-child(3n+3)::before {
+  background-image: url(../img/cup-3.webp)
+}
+.packaging-item:first-child {
+  padding-top: 0
+}
+.packaging-item:first-child::before {
+  top: 0
+}
+.packaging-item:last-child .packaging-item__decor-line {
+  display: none
+}
+.brand__head {
+  text-align: center;
+  margin-bottom: 24px
+}
+@media(min-width:75em) {
+  .brand__head {
+    margin-bottom: 460px
+  }
+}
+.brand__title {
+  margin: 0
+}
+.brand-block {
+  position: relative;
+  z-index: 1;
+  padding: 116px 0 60px
+}
+@media(min-width:48em) {
+  .brand-block {
+    padding: 100px 0 70px;
+    margin-top: 200px
+  }
+}
+@media(min-width:75em) {
+  .brand-block {
+    padding: 116px 0 119px
+  }
+}
+.brand-block::after {
+  z-index: -1;
+  border-radius: 50%;
+  background: #e56f49;
+  box-shadow: 0 -16px 32px rgba(0,0,0,.25);
+  position: absolute;
+  top: 42px;
+  left: 50%;
+  width: 2299px;
+  content: "";
+  translate: -50% 0;
+  height: 1071px
+}
+.brand-block__packs {
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+  top: 0;
+  margin: 0 auto;
+  max-width: 1991px;
+  height: 678px;
+  translate: 0 -49%
+}
+@media(min-width:48em) {
+  .brand-block__packs {
+    top: -114px
+  }
+}
+@media(min-width:87.5em) {
+  .brand-block__packs {
+    top: -70px
+  }
+}
+@media(min-width:100em) {
+  .brand-block__packs {
+    top: -49%;
+    translate: 0 0
+  }
+}
+.brand-block__pack {
+  position: absolute;
+  bottom: 0;
+  -webkit-filter: drop-shadow(0 4px 14px rgba(0, 0, 0, .25));
+  filter: drop-shadow(0 4px 14px rgba(0, 0, 0, .25));
+  transition: .2s ease-in-out;
+  max-width: 50%
+}
+.brand-block__pack img {
+  mix-blend-mode: luminosity;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+  transition: .2s ease-in-out
+}
+@media(any-hover:hover) {
+  .brand-block__pack:hover {
+    translate: 0 -7%
+  }
+  .brand-block__pack:hover img {
+    -webkit-filter: grayscale(0);
+    filter: grayscale(0)
+  }
+}
+.brand-block__pack:nth-child(1) {
+  rotate: -27.37deg;
+  left: 3%;
+  bottom: 48px;
+  z-index: 1;
+  width: 16.46%
+}
+.brand-block__pack:nth-child(2) {
+  rotate: -22.69deg;
+  z-index: 2;
+  bottom: -90px;
+  left: 6%;
+  width: 29.56%
+}
+@media(min-width:48em) {
+  .brand-block__pack:nth-child(2) {
+    bottom: 0
+  }
+}
+.brand-block__pack:nth-child(3) {
+  rotate: -5.46deg;
+  left: 18%;
+  bottom: 148px;
+  z-index: 3;
+  width: 26.3%
+}
+.brand-block__pack:nth-child(4) {
+  rotate: -2.2deg;
+  left: 34%;
+  z-index: 4;
+  bottom: 178px;
+  width: 14.75%
+}
+.brand-block__pack:nth-child(5) {
+  rotate: 2.69deg;
+  left: 41%;
+  z-index: 5;
+  bottom: 126px;
+  width: 20.8%
+}
+.brand-block__pack:nth-child(6) {
+  rotate: 2.03deg;
+  right: 32%;
+  z-index: 6;
+  bottom: 177px;
+  width: 20%
+}
+.brand-block__pack:nth-child(7) {
+  rotate: 6.75deg;
+  right: 22%;
+  z-index: 7;
+  bottom: 173px;
+  width: 19.35%
+}
+.brand-block__pack:nth-child(8) {
+  rotate: 12.67deg;
+  right: 16%;
+  z-index: 8;
+  bottom: 144px;
+  width: 11.4%
+}
+.brand-block__pack:nth-child(9) {
+  rotate: 15.32deg;
+  bottom: 75px;
+  z-index: 9;
+  right: 6%;
+  width: 13.45%
+}
+.brand-block__personal {
+  position: absolute;
+  left: 50%;
+  top: 21px;
+  translate: -50% 0;
+  width: 100%;
+  z-index: 2;
+  max-width: 335px
+}
+@media(min-width:64em) {
+  .brand-block__personal {
+    max-width: 429px
+  }
+}
+.brand-block__title {
+  color: #fff;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 32px
+}
+@media(min-width:48em) {
+  .brand-block__title {
+    margin-bottom: 40px
+  }
+}
+@media(min-width:64em) {
+  .brand-block__title {
+    margin-bottom: 60px
+  }
+}
+.brand-block__counters {
+  max-width: 1522px;
+  display: flex;
+  margin: 0 auto 32px;
+  flex-direction: column
+}
+@media(min-width:48em) {
+  .brand-block__counters {
+    margin: 0 auto 60px;
+    flex-direction: row
+  }
+}
+@media(min-width:64em) {
+  .brand-block__counters {
+    margin: 0 auto 100px
+  }
+}
+.brand-block__bottom {
+  text-align: center
+}
+.brand-counter {
+  font-weight: 900;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  color: #fff
+}
+.brand-counter:nth-child(2) {
+  border-left: 1px solid #d5d6df;
+  border-right: 1px solid #d5d6df;
+  margin: 20px
+}
+@media(max-width:47.99875em) {
+  .brand-counter:nth-child(2) {
+    margin: 20px 0;
+    border: none
+  }
+}
+.brand-counter__num {
+  line-height: 130%;
+  text-transform: uppercase;
+  white-space: nowrap;
+  font-size: 50px
+}
+@media(min-width:48em) {
+  .brand-counter__num {
+    font-size: 5vw
+  }
+}
+@media(min-width:93.75em) {
+  .brand-counter__num {
+    font-size: 108px
+  }
+}
+.brand-counter__text {
+  line-height: 130%;
+  font-size: 18px
+}
+@media(min-width:48em) {
+  .brand-counter__text {
+    font-size: 1.7vw
+  }
+}
+@media(min-width:93.75em) {
+  .brand-counter__text {
+    font-size: 30px
   }
 }
