--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ svg {
   gap: 16px
 }
 .spollers__item {
-  padding: 16px 0;
+  padding: 16px;
   position: relative
 }
 .spollers__item::before {
